# agent-runner

./: .gitignore  README.md  pyproject.toml
apifox/: AGENT_RUNNER_HTTP_STREAM.openapi.json  AGENT_RUNNER_HTTP_STREAM.postman_collection.json  README.md
config/: agent-runner.env  agents.json  litellm.env  litellm.yaml
docs/v1/: Architecture V1.md  nacos-configuration.md
src/: .env.example  .env.local  config.py  main.py  nacos_config.py
src/agent_definitions/: __init__.py  config_models.py  factory.py  loader.py
src/agent_runner/: __init__.py  config.py  main.py  nacos_config.py
src/agent_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_runner/agent_definitions/: __init__.py  factory.py  loader.py
src/agent_runner/api/: __init__.py  debug_routes.py  routes.py  streaming.py
src/agents/: config_models.py  factory.py  loader.py
src/api/: __init__.py  debug_routes.py  routes.py  streaming.py
src/context/: __init__.py  builder.py  profile_adapter.py  prompt_assembler.py  rag_adapter.py  truncation.py
src/gateway/: __init__.py  litellm_client.py
src/mcps/: lifecycle.py  mcp_connection_pool.py  mcp_manager.py
src/observability/: logging.py  metrics.py  tracing.py
src/runtime/: cancellation.py  events.py  lifecycle.py  openai_agents_runtime.py  orchestrator.py
src/sdk/: __init__.py  openai_runtime.py
src/tools/: __init__.py  executor.py  registry.py
tests/: nacos_config_integration.py  nacos_config_test.py  test_config_defaults.py  test_litellm_model_factory.py  test_openai_agents_runtime.py
(+21 files in other folders)
