[project]
name = "agent-runner"
version = "0.1.0"
description = "Agent Runner - Core runtime component for AI Runtime Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.1",
    "httpx>=0.28.1",
    "litellm>=1.85.0",
    "openai>=2.21.0",
    "sse-starlette>=3.2.0",
    "tenacity>=9.0.0",
    "structlog>=25.5.0",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "prometheus-client>=0.21.1",
    "redis>=5.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.13",
    "mypy==2.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
